--- a/style/style.css
+++ b/style/style.css
@@ -103,7 +103,7 @@ ul{
     margin-left: auto;
     font-size: 18px;
     user-select: none;
-    padding: 11px;
+    padding: 11px 0;
     box-sizing: border-box;
 
 }
@@ -201,7 +201,6 @@ ul{
 .products-items{
     display: grid;
     grid-template-columns: repeat(3, 384px);
-    grid-template-rows: repeat(2, 564px);
     gap: 24px;
     margin-top: 60px;
 
@@ -252,7 +251,7 @@ ul{
     color: #757575;
 }
 
-.button .product-button{
+.button.product-button{
     display: flex;
     justify-content: center;
     width: 182px;
@@ -260,7 +259,7 @@ ul{
 
 }
 
-.button .product-button span:first-child{
+.button.product-button span:first-child{
     margin-right: 10px;
 }
 
